Mobile layout break fixed

--- a/src/components/related/LandingPage/MainSwipeView/styles.module.scss
+++ b/src/components/related/LandingPage/MainSwipeView/styles.module.scss
@@ -1,7 +1,13 @@
+@import '~styles/abstracts/mixins';
+
 .MainSwipeView {
   margin-bottom: 15rem;
   display: grid;
   grid-template:
     'TitleView' 14.5rem
     'CardsView' 35.785rem;
+  
+  @include respond(xs) {
+    display: none;
+  }
 }
